<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XinGuanDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="Register">Register</string>
	<string name="Login">Log in</string>
	<string name="Cancle">Cancle</string>
	<string name="Name">Name</string>
	<string name="Password">Password</string>
	<string name="PasswordAgain">Password Again</string>
	<string name="infopage">Info Page</string>
	<string name="chinese">Chinese\t</string>
	<string name="math">Math\t</string>
	<string name="english">English\t</string>
	<string name="modify">Modify</string>
	<string name="drop">Drop</string>
	<string name="confirm">Confirm</string>
	<string name="manage">Manage</string>
	<string name="login_failure">Failed in loging in</string>
	<string name="greeting">Hello</string>
	<string name="browse">Browse</string>
	<string name="warning">Warning</string>
	<string name="warning_messege">Info of this user is being unrecoverablely modified!\nAre you sure to confirm this modification?</string>
	<string name="modify_success">Modify Successfully</string>
	<string name="input_limits_name_hint">Under 10 characters of Ch or En</string>
	<string name="man">Man</string>
	<string name="woman">Woman</string>
	<string name="sex">Sex</string>
	<string name="age">Age</string>
	<string name="hobby">Hobby</string>
	<string name="hobby1">Hobby1</string>
	<string name="hobby2">Hobby2</string>
	<string name="hobby3">Hobby3</string>
	<string name="successIOnRegister">Register Successfully</string>
	<string name="activity_main_greeting_to_admin">Dear admin,you are powerful enough to manage all the users!Now,you can begin!</string>
	<string name="success_in_droping_user">Drop user successfully</string>
	<string name="welcome">Welcome</string>
	<string name="i_have_known_it">OK</string>
	<string name="register_fail">Failed in registering</string>
</resources>
